--- a/src/index.css
+++ b/src/index.css
@@ -75,3 +75,53 @@
   width: 76px;
   height: 49px;
 }
+.hero-title {
+  color: #0f0f0f;
+  font-family: Space Grotesk;
+  font-size: 90px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 86px; /* 95.556% */
+  letter-spacing: -1.8px;
+}
+.hero-description {
+  color: #404040;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40px;
+}
+.discover-btn {
+  display: flex;
+  padding: 20px 36px;
+
+  align-items: center;
+  gap: 10px;
+  background: #495af0;
+  color: #ffffff;
+}
+.rating {
+  color: #fd9c06;
+  font-family: Inter;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: -0.52px;
+}
+.review {
+  color: #404040;
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-top: 2.71px;
+}
+.border {
+  width: 533px;
+  height: 537px;
+  flex-shrink: 0;
+  border: 4px solid var(--s-1, #fd9c06);
+}
