--- a/src/index.css
+++ b/src/index.css
@@ -93,8 +93,13 @@
   line-height: 40px;
 }
 .discover-btn {
-  display: flex;
+  display: inline-flex;
   padding: 20px 36px;
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 26px;
 
   align-items: center;
   gap: 10px;
@@ -124,4 +129,84 @@
   height: 537px;
   flex-shrink: 0;
   border: 4px solid var(--s-1, #fd9c06);
+}
+.more-about {
+  color: #404040;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 36px;
+}
+.about-text {
+  color: #eb5757;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 36px; /* 180% */
+  text-transform: uppercase;
+}
+.line1 {
+  width: 69px;
+  height: 2px;
+  background: #eb5757;
+}
+.about-title {
+  color: #0f0f0f;
+  width: 542px;
+  font-family: Space Grotesk;
+  font-size: 54px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 62px; /* 114.815% */
+  letter-spacing: -1.08px;
+}
+.about-description {
+  color: #404040;
+  margin-top: 20px;
+  width: 526px;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36px; /* 180% */
+}
+.about-btn {
+  display: inline-flex;
+  padding: 20px 36px;
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 26px;
+
+  align-items: center;
+  gap: 10px;
+  background: #495af0;
+  color: #ffffff;
+}
+.line2 {
+  width: 150px;
+  height: 1px;
+  background: #d6dbde;
+}
+.count {
+  color: #fd9c06;
+  margin-top: 27px;
+
+  font-family: Space Grotesk;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 108%; /* 43.2px */
+}
+.count-subtitle {
+  color: #404040;
+  font-family: Space Grotesk;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px;
+  margin-top: 10px;
 }
