--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,12 @@
   margin: 0 auto;
   width: 100%;
 }
+
 .navbar a:hover {
   background: none;
   border-radius: 0;
 }
+
 .navbar a {
   font-family: Inter;
   font-size: 20px;
@@ -19,6 +21,7 @@
   line-height: normal;
   border-radius: 0;
 }
+
 .nav-btn {
   color: #404040;
   text-align: center;
@@ -34,23 +37,28 @@
   align-items: center;
   gap: 10px;
 }
+
 .active-border {
   border-bottom: 1px solid #fd9c06;
   width: 45%;
   padding: 3px 0;
   margin-right: 40px;
 }
+
 .font-primary {
   font-family: "Space Grotesk", sans-serif;
 }
+
 .font-secondary {
   font-family: "Inter", sans-serif;
 }
+
 .wraper {
   max-width: 1380px;
   margin: 0 auto;
   width: 100%;
 }
+
 .active {
   color: #fd9c06;
   font-family: Inter;
@@ -71,19 +79,23 @@
   height: 20px;
   width: 20px;
 }
+
 .logo {
   width: 76px;
   height: 49px;
 }
+
 .hero-title {
   color: #0f0f0f;
   font-family: Space Grotesk;
   font-size: 90px;
   font-style: normal;
   font-weight: 700;
-  line-height: 86px; /* 95.556% */
+  line-height: 86px;
+  /* 95.556% */
   letter-spacing: -1.8px;
 }
+
 .hero-description {
   color: #404040;
   font-family: Inter;
@@ -92,6 +104,7 @@
   font-weight: 400;
   line-height: 40px;
 }
+
 .discover-btn {
   display: inline-flex;
   padding: 20px 36px;
@@ -106,6 +119,7 @@
   background: #495af0;
   color: #ffffff;
 }
+
 .rating {
   color: #fd9c06;
   font-family: Inter;
@@ -115,6 +129,7 @@
   line-height: normal;
   letter-spacing: -0.52px;
 }
+
 .review {
   color: #404040;
   font-family: Inter;
@@ -124,12 +139,14 @@
   line-height: normal;
   margin-top: 2.71px;
 }
+
 .border {
   width: 533px;
   height: 537px;
   flex-shrink: 0;
   border: 4px solid var(--s-1, #fd9c06);
 }
+
 .more-about {
   color: #404040;
   font-family: Inter;
@@ -138,20 +155,24 @@
   font-weight: 600;
   line-height: 36px;
 }
+
 .about-text {
   color: #eb5757;
   font-family: Inter;
   font-size: 20px;
   font-style: normal;
   font-weight: 600;
-  line-height: 36px; /* 180% */
+  line-height: 36px;
+  /* 180% */
   text-transform: uppercase;
 }
+
 .line1 {
   width: 69px;
   height: 2px;
   background: #eb5757;
 }
+
 .about-title {
   color: #0f0f0f;
   width: 542px;
@@ -159,9 +180,11 @@
   font-size: 54px;
   font-style: normal;
   font-weight: 700;
-  line-height: 62px; /* 114.815% */
+  line-height: 62px;
+  /* 114.815% */
   letter-spacing: -1.08px;
 }
+
 .about-description {
   color: #404040;
   margin-top: 20px;
@@ -170,8 +193,10 @@
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
-  line-height: 36px; /* 180% */
+  line-height: 36px;
+  /* 180% */
 }
+
 .about-btn {
   display: inline-flex;
   padding: 20px 36px;
@@ -186,11 +211,13 @@
   background: #495af0;
   color: #ffffff;
 }
+
 .line2 {
   width: 150px;
   height: 1px;
   background: #d6dbde;
 }
+
 .count {
   color: #fd9c06;
   margin-top: 27px;
@@ -199,8 +226,10 @@
   font-size: 40px;
   font-style: normal;
   font-weight: 700;
-  line-height: 108%; /* 43.2px */
+  line-height: 108%;
+  /* 43.2px */
 }
+
 .count-subtitle {
   color: #404040;
   font-family: Space Grotesk;
@@ -210,25 +239,30 @@
   line-height: 22px;
   margin-top: 10px;
 }
+
 .feature-text {
   color: #eb5757;
   font-family: Inter;
   font-size: 20px;
   font-style: normal;
   font-weight: 600;
-  line-height: 36px; /* 180% */
+  line-height: 36px;
+  /* 180% */
   text-transform: uppercase;
 }
+
 .feature-title {
   color: #0f0f0f;
   font-family: Space Grotesk;
   font-size: 54px;
   font-style: normal;
   font-weight: 700;
-  line-height: 62px; /* 114.815% */
+  line-height: 62px;
+  /* 114.815% */
   letter-spacing: -1.08px;
   width: 721px;
 }
+
 .feature-description {
   color: #404040;
   width: 517px;
@@ -236,8 +270,10 @@
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
-  line-height: 36px; /* 180% */
+  line-height: 36px;
+  /* 180% */
 }
+
 .element {
   width: 294px;
   height: 294px;
@@ -245,6 +281,7 @@
   border-radius: 147px 147px 0px 147px;
   background: #c3caff;
 }
+
 .project-success {
   width: 215px;
   height: 226px;
@@ -252,4 +289,99 @@
   border-radius: 12px;
   background: var(--neutral-pure-white, #fff);
   box-shadow: 8px -7px 54px 0px rgba(202, 202, 202, 0.2);
+}
+
+.service-title {
+  color: #0F0F0F;
+  width: 418px;
+  font-family: Space Grotesk;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 62px;
+  margin-bottom: 20px;
+  margin-top: 6px;
+
+  letter-spacing: -1px;
+}
+
+.service-description {
+  color: var(--p-3, #404040);
+  font-family: Inter;
+  width: 418px;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36px;
+
+}
+
+.line02 {
+  border-right: 1px dashed hsla(0, 0%, 64%, 1);
+  margin-right: 39px;
+  height: 70px;
+
+
+
+}
+
+.service-cards {
+  width: 951px;
+  height: 804px;
+  flex-shrink: 0;
+  background: #F4F9FF;
+  margin-left: 249px;
+
+}
+
+.service-card {
+  padding: 30px;
+
+  background-color: hsla(0, 0%, 100%, 1);
+  width: 398px;
+  height: 297px;
+
+
+}
+
+.shadow {
+  width: 418px;
+  height: 151px;
+  opacity: 0.14000000059604645;
+  background: #404040;
+  filter: blur(40px);
+  color: hsla(0, 0%, 25%, 1);
+}
+
+.service-card-title {
+  color: #0F0F0F;
+  font-family: Inter;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-top: 14px;
+}
+
+.service-card-description {
+  color: var(--p-3, #404040);
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px;
+  margin-top: 12px;
+  /* 162.5% */
+}
+
+.service-btn {
+  color: #495AF0;
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 26px;
+  margin-top: 30px;
+  display: flex;
+  /* 144.444% */
 }
