--- a/src/index.css
+++ b/src/index.css
@@ -522,3 +522,63 @@
 .swiper-pagination-bullet-active {
   background-color: #fd9c06 !important;
 }
+.blog-title {
+  color: var(--p-2, #0f0f0f);
+  text-align: center;
+  font-family: Space Grotesk;
+  font-size: 54px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 62px; /* 114.815% */
+  letter-spacing: -1.08px;
+  margin-top: 392px;
+}
+.blog-image {
+  width: 420.778px;
+  height: 314px;
+  flex-shrink: 0;
+}
+.blog-status {
+  color: #858585;
+  font-family: Inter;
+  font-size: 18.003px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.line3 {
+  width: 420.778px;
+  height: 1px;
+  background: #e2e2e2;
+  margin-top: 27px;
+  margin-bottom: 11px;
+}
+.blog-subtitle {
+  color: #0f0f0f;
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 38px; /* 158.333% */
+  margin-bottom: 10px;
+}
+.blog-details {
+  color: #404040;
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px; /* 177.778% */
+  margin-bottom: 16px;
+  width: 417.779px;
+}
+.blog-date {
+  color: #404040;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  background: #fff;
+  padding: 14px 10px;
+}
