--- a/src/index.css
+++ b/src/index.css
@@ -351,6 +351,10 @@
   border-radius: 12px;
   background: #fff;
   box-shadow: 8px -7px 54px 0px rgba(202, 202, 202, 0.2);
+  /* absolute -left-[42px] -bottom-[33px] */
+  position: absolute;
+  left: -42px;
+  bottom: -33px;
 }
 
 .service-title {
@@ -386,14 +390,12 @@
 .service-cards {
   width: 951px;
   height: 804px;
-
   background: #f4f9ff;
-  /* margin-left: 249px; */
+  margin-left: 249px;
 }
 
 .service-card {
   padding: 30px;
-
   background-color: hsla(0, 0%, 100%, 1);
   width: 398px;
   height: 297px;
@@ -722,6 +724,14 @@
   gap: 4px;
   margin-left: 28px;
 }
+.banner-card {
+  /* absolute -bottom-[100px] lg:bottom-[107px] -left-[50px] lg:-left-[188px]  z-10 */
+  position: absolute;
+  bottom: 107px;
+  left: -188px;
+  z-index: 10;
+  /* absolute  bottom-[107px]  -left-[188px]  z-10 */
+}
 
 .banner-project {
   width: 274px;
@@ -730,6 +740,10 @@
   border-radius: 10px;
   background: #fff;
   box-shadow: -10px 23px 54px 0px rgba(172, 172, 172, 0.12);
+  /* absolute -top-[55px] right-0 lg:-top-[47px] z-10 md:right-[124px] lg:-right-[98px] */
+  position: absolute;
+  right: -98px;
+  top: -47px;
 }
 
 .footer-header {
@@ -761,13 +775,47 @@
   justify-content: space-between;
   padding: 30px;
 }
+.svg-clip {
+  width: 525px;
+  height: 621px;
+}
+.hero-sec {
+  /* mt-[129px] relative  */
+  position: relative;
+  margin-top: 129px;
+}
 @media (max-width: 576px) {
   .hero-sec {
-    margin-left: 35px;
+    margin-left: -122px;
+    width: 100%;
   }
+  .hero-img {
+    width: 100%;
+  }
+  .banner-card {
+    /* absolute -bottom-[100px] lg:bottom-[107px] -left-[50px] lg:-left-[188px]  z-10 */
+    position: absolute;
+    bottom: -82px;
+    left: -65px;
+    z-index: 10;
+  }
+  /* .portrait-img {
+    width: 100%;
+  }
+  .svg-clip {
+    width: 100%;
+    margin-left: 32px;
+  }
+  .border {
+    width: 540px;
+  } */
+
   .banner-project {
-    top: -65px;
-    right: 5px;
+    /* absolute -top-[55px] right-0 lg:-top-[47px] z-10 md:right-[124px] lg:-right-[98px] */
+    position: absolute;
+    right: 48px;
+    top: 120px;
+    z-index: 10;
   }
   .discover-btn {
     margin-left: 20px;
@@ -784,18 +832,56 @@
     width: 100%;
     height: 1450px;
     margin-top: 50px;
+    margin-left: 0;
   }
   .service-card {
-    margin-left: 100px;
-    margin-top: 50px;
-
+    margin-left: 270px;
+    margin-top: 0px;
     background-color: hsla(0, 0%, 100%, 1);
     width: 398px;
     height: 297px;
   }
+  .testimonial {
+    width: 100%;
+
+    flex-shrink: 0;
+  }
+  .testimonial-title {
+    width: 100%;
+    margin-left: 50px;
+    margin-right: 50px;
+
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 42px;
+    /* 114.815% */
+    letter-spacing: -1.08px;
+  }
+  .testimonial .discover-btn {
+    margin-left: 50px;
+  }
+  .testimonial-content {
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+  .blog-title {
+    font-size: 38px;
+
+    margin-top: 700px;
+  }
+  .footer-header {
+    font-size: 28px;
+    text-align: center;
+  }
+  .footer-desctiption {
+    font-size: 14px;
+    text-align: center;
+    /* 177.778% */
+  }
 }
 
-@media (min-width: 767px) {
+/* @media (min-width: 767px) {
   .hero-sec {
     margin-left: 105px;
   }
@@ -813,4 +899,4 @@
   .hero-description {
     margin-left: 35px;
   }
-}
+} */
